fix rust.env home directory

--- a/env/.zmenv/exports.d/rust.env
+++ b/env/.zmenv/exports.d/rust.env
@@ -2,11 +2,11 @@
 
 # add rustup/multirust to path
 if [ -d "$HOME/.multirust" ] ; then
-  export PATH=$PATH:"/home/zach/.multirust/toolchains/nightly/cargo/bin"
-  export PATH=$PATH:"/home/zach/.multirust/toolchains/stable/cargo/bin"
+  export PATH=$PATH:"$HOME/.multirust/toolchains/nightly/cargo/bin"
+  export PATH=$PATH:"$HOME/.multirust/toolchains/stable/cargo/bin"
 fi
 
 # add cargo bins to path
 if [ -d "$HOME/.cargo" ] ; then
-  export PATH=$PATH:"/home/zach/.cargo/bin"
+  export PATH=$PATH:"$HOME/.cargo/bin"
 fi
