minor improvements on go and vim
- add reallink function which gets fullpath of a symlink/file
- dont look for GOROOT at a known location
    - use which for the is-installed check
    - use reallink to set GOROOT
- better .vim/swapfiles directory creation

--- a/env/.zmenv/aliases.d/general.env
+++ b/env/.zmenv/aliases.d/general.env
@@ -26,14 +26,15 @@ alias .5='cd ../../../../..'
 alias pud='pushd'
 alias pod='popd'
 
-
 mk_and_cd() {
     mkdir $1 && cd $1
 }
 alias mkcd='mk_and_cd'
 
 
-
+##
+## overrides
+##
 
 man() {
     env \
@@ -45,4 +46,29 @@ man() {
         LESS_TERMCAP_ue=$(printf "\e[0m") \
         LESS_TERMCAP_us=$(printf "\e[1;32m") \
             man "$@"
+}
+
+reallink() {
+    binpath=$(which $1)
+    if [ $? -ne 0 ]; then
+        echo "could not find "$1
+        return 1
+    fi
+    if [ ! -L "$binpath" ]; then
+        echo $binpath
+        return 0
+    fi
+
+    linkpath=$(readlink $binpath)
+    if [ $? -ne 0 ]; then
+        echo "could not readlink "$binpath
+        return 1
+    fi
+    if [[ "$linkpath" == /* ]]; then
+        echo $linkpath
+        return 0
+    fi
+
+    echo $(dirname $binpath)/$linkpath
+    return 0
 }
