--- a/env/.zmenv/exports.d/golang.env
+++ b/env/.zmenv/exports.d/golang.env
@@ -1,9 +1,9 @@
 #!/usr/bin/env bash
 
 # Go (if installed)
-if [ -e "/usr/local/go" ] ; then
-  export GOPATH=~/go
-  mkdir -p $GOPATH
-  export GOROOT=/usr/local/go
-  export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+if [ $(which go) ] ; then
+    export GOPATH=~/go
+    mkdir -p $GOPATH
+    export GOROOT=$(reallink go | xargs dirname | xargs dirname)
+    export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 fi
