go under brew on macos needs one more GOROOT directory

--- a/env/.zmenv/exports.d/golang.env
+++ b/env/.zmenv/exports.d/golang.env
@@ -6,4 +6,8 @@ if [ $(which go) ] ; then
     mkdir -p $GOPATH
     export GOROOT=$(reallink go | xargs dirname | xargs dirname)
     export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+
+    if [ -e "$GOROOT/.brew" ]; then
+        export GOROOT=$GOROOT/libexec
+    fi
 fi
