add go to path if in default install location

--- a/env/.zmenv/exports.d/golang.env
+++ b/env/.zmenv/exports.d/golang.env
@@ -1,7 +1,11 @@
 #!/usr/bin/env bash
 
+if [ -e "/usr/local/go" ]; then
+    export PATH=$PATH:/usr/local/go/bin
+fi
+
 # Go (if installed)
-if [ $(which go) ] ; then
+if which go ; then
     export GOPATH=~/go
     mkdir -p $GOPATH
     export GOROOT=$(reallink go | xargs dirname | xargs dirname)
