use a common.sh for bash-ability

--- a/env/.zmenv/exports.d/golang.env
+++ b/env/.zmenv/exports.d/golang.env
@@ -5,7 +5,7 @@ if [ -e "/usr/local/go" ]; then
 fi
 
 # Go (if installed)
-if which go ; then
+if which go > /dev/null 2>&1; then
     export GOPATH=~/go
     mkdir -p $GOPATH
     export GOROOT=$(reallink go | xargs dirname | xargs dirname)
