add destination directory to ghclone

--- a/env/.zmenv/aliases.d/git.env
+++ b/env/.zmenv/aliases.d/git.env
@@ -1,7 +1,17 @@
 #!/usr/bin/env bash
 
 ghub_clone() {
-    git clone https://github.com/$1
+    if [ $# -eq 0 ]; then
+        echo "not enough arguments given"
+        return 1
+    elif [ $# -gt 2 ]; then
+        echo "too many arguments given"
+        return 1
+    fi
+
+    repo=$1
+    shift
+    git clone https://github.com/$repo $@
 }
 alias ghclone='ghub_clone'
 
