add tmux config, golang updates, nerdtree find-file, blah blah blah

--- a/env/.zmenv/aliases.d/general.env
+++ b/env/.zmenv/aliases.d/general.env
@@ -27,9 +27,57 @@ alias pud='pushd'
 alias pod='popd'
 
 mk_and_cd() {
-    mkdir $1 && cd $1
+    mkdir -p $1 && cd $1
 }
 alias mkcd='mk_and_cd'
+
+##
+## curl / wget / json
+##
+
+json_formatter() {
+    if which jq > /dev/null 2>&1; then
+        echo "jq"
+        return 0
+    fi
+
+    echo "python -m json.tool"
+}
+
+curl_json() {
+    if [ $# -lt 1 ]; then
+        echo "no source argument given"
+        return 1
+    fi
+
+    src=$1 ; shift
+    curl $src 2>/dev/null | $(json_formatter) $@
+}
+
+wget_json() {
+    if [ $# -lt 1 ]; then
+        echo "no source argument given"
+        return 1
+    fi
+
+    src=$1 ; shift
+    wget -qO- $src 2>/dev/null | $(json_formatter) $@
+}
+
+get_json() {
+    if which curl > /dev/null 2>&1; then
+        curl_json $@
+    elif which wget > /dev/null 2>&1; then
+        wget_json $@
+    else
+        echo "wget nor curl is installed"
+        return 1
+    fi
+}
+
+alias jscurl='curl_json'
+alias jswget='wget_json'
+alias jsget='get_json'
 
 
 ##
