--- a/env/.zmenv/aliases.d/git.env
+++ b/env/.zmenv/aliases.d/git.env
@@ -9,11 +9,25 @@ ghub_clone() {
         return 1
     fi
 
-    repo=$1
+    # remove any transport and hostname
+    repo=$(echo $1 | sed 's/.*:\/\///' | sed 's/github.com\///')
     shift
+
+    # issue with fixed repo source and any other passed args
     git clone https://github.com/$repo $@
 }
 alias ghclone='ghub_clone'
+
+git_add_root() {
+    root=$(git rev-parse --show-toplevel)
+    if [ $? -ne 0 ]; then return 1; fi
+
+    relpath=$(python -c 'import os.path, sys; print os.path.relpath(sys.argv[1],sys.argv[2])' "$root" "$(pwd)")
+    if [ $? -ne 0 ]; then return 1; fi
+
+    git add $relpath
+}
+alias garoot='git_add_root'
 
 alias gco='git checkout'
 alias gpom='git push origin master'
