WIP: saving before pixelbook wipe to 20.04

--- a/env/.zmenv/aliases.d/general.env
+++ b/env/.zmenv/aliases.d/general.env
@@ -15,6 +15,13 @@ alias pscpu10='ps auxf | sort -r -k 3 | head -10'   # 10 highest cpu users
 alias psgrep='ps aux   | grep'
 
 ##
+## services
+##
+
+alias sysd='sudo systemctl'
+alias jctl='sudo journalctl'
+
+##
 ## navigation
 ##
 
