--- a/env/.zmenv/aliases.d/ubuntu.env
+++ b/env/.zmenv/aliases.d/ubuntu.env
@@ -1,9 +1,9 @@
 #!/usr/bin/env bash
 
 if is_ubuntu; then
-    alias sapt='sudo apt-get'
+    alias sapt='sudo apt'
     alias sapti='sapt install'
     alias saptu='sapt update'
-    alias saptup='sapt upgrade'
+    alias saptug='sapt upgrade'
     alias sapts='apt search'
 fi
