--- a/new-i3/.i3/config
+++ b/new-i3/.i3/config
@@ -58,11 +58,11 @@ bindsym $meta+$alt+l exec "$HOME/.i3/scripts/lock"
 #----------------------------------------------------------------
 
 # set font -- Yosemite San Francisco
-font pango:SFNS Display 8
+font pango:SFNS Display 12
 
 bar {
     position top
-    font pango:SFNS Display, FontAwesome 6
+    font pango:DejaVu Sans Mono, FontAwesome 10
     status_command /usr/local/bin/i3status-rs ~/.i3/status.toml
     colors {
         separator #666666
